# EpiblastOrientationImageAnalysis

./: .gitmodules  Agents.md  README.md  pyproject.toml  snakemake_config.yaml
scripts/: backrotate_points_from_coordinates.py  backrotate_takafumi.ipynb  compress_repo.py  downscale_image.py  embryo_mesh_to_coordinates.py  label_to_cell_meshes.py  label_to_embryo_mesh.py  rotate_image_into_coordinates.py  rotate_mesh_into_coordinates.py  rotate_metadata.py  rotate_points_into_coordinates.py  rotated_mesh_to_domain_labels.py
workflow/: Snakefile
