[project]
name = "ti-epiblast-cell-organization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.2",
    "ipykernel>=7.1.0",
    "napari>=0.6.5",
    "numpy>=2.3.5",
    "pyside6>=6.10.0",
    "rtree>=1.4.1",
    "scipy>=1.16.3",
    "snakemake>=9.13.7",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "trimesh>=4.9.0",
    "toml>=0.10.2",
    "distinctipy>=1.3.4",
    "matplotlib>=3.10.8",
]
